syntax = "proto3";

package lms;

option go_package = "github.com/hassanalgoz/swe/pkg/services/ports/lms";

service LMS {
  // Create
  rpc CreateCourse(CoursePut) returns (Course) {}

  // Read
  rpc GetCourseById(ByOneField) returns (Course) {}
  rpc GetCourseByCode(ByOneField) returns (Course) {}
  rpc ListCourses(Empty) returns (CourseList) {}

  // Update
  rpc UpdateCourse(CoursePut) returns (Course) {}
  
  // Delete
  rpc DeleteCourse(ByOneField) returns (Empty) {}
}

message Empty {}

message Course {
  string id = 1;   // uuidv4
  string code = 2; // ex: ICS101
  string name = 3; // ex: Introduction to Computer Science
  string description = 4;
}

message CoursePut {
  string id = 1;   // specified in update only
  string code = 2;
  string name = 3;
  string description = 4;
}

message ByOneField {
  string value = 1;
}

message CourseList {
  repeated Course list = 1;
}
